# requi

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: adr.md  design.md  learnings.md
docs/features/20260618193518-bootstrap/: plan.md  spec.md
docs/features/20260618223203-layout/: plan.md  spec.md
docs/features/20260619115209-user-settings/: plan.md  spec.md
docs/features/20260619130809-workspace-config/: plan.md  spec.md
docs/features/20260619155301-keyboard-shortcuts/: plan.md  spec.md
docs/features/20260619223306-body-editor/: plan.md  spec.md
docs/features/20260620001410-drag-and-drop/: plan.md  spec.md
docs/features/20260620015048-send-request/: plan.md  spec.md
docs/features/20260620111743-environments/: plan.md  spec.md
docs/features/20260620192913-persist-edits/: plan.md  spec.md
docs/features/20260621021033-tree-crud/: plan.md  spec.md
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src/__tests__/: router-no-settings-route.test.ts
src/app/: providers.tsx
src/components/: command-palette.tsx  demo-form.tsx  demo-table.tsx
src/components/ui/: badge.tsx  (+10 more)
src/lib/: result.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/test/: setup.ts
tests/e2e/: bootstrap.spec.tsx  command-palette.e2e.ts  workspace.e2e.ts
tests/integration/: bootstrap.spec.tsx
(+311 files in other folders)
